<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">


    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/icon_search"
        android:title="@string/menu_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item
        android:id="@+id/menu_item_share"
        android:icon="@drawable/icon_share"
        android:title="@string/menu_share"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/menu_item_login"
        android:title="@string/menu_login"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/menu_item_config"
        android:title="@string/menu_config"
        app:showAsAction="collapseActionView" />

</menu>