<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignupActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/signup_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        android:visibility="visible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ImageView
            android:layout_width="match_parent"
            android:contentDescription="@null"
            android:scaleType="fitCenter"
            android:alpha="1"
            android:src="@drawable/logo_login"
            android:layout_height="150dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailId"
            android:hint="@string/signup_email"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_above="@+id/emailId"
            android:layout_centerHorizontal="true"
            android:id="@+id/nameId"
            android:hint="@string/signup_name" />

        <TextView
            android:text="@string/signup_already"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/already"
            android:layout_above="@+id/nameId"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="15dp"
            android:onClick="already" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordId"
            android:hint="@string/signup_password"
            android:layout_below="@+id/emailId"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:text="@string/signup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registerId"
            android:onClick="register"
            android:layout_below="@+id/confirmId"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/confirmId"
            android:hint="@string/signup_confirm"
            android:layout_below="@+id/passwordId"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>