<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_help"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HelpActivity"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:text="@string/help_instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="12dp"
        android:id="@+id/tvHelp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_below="@+id/tvHelp"
        android:layout_alignLeft="@+id/tvHelp"
        android:layout_alignStart="@+id/tvHelp"
        android:layout_marginTop="10dp"
        android:id="@+id/etEmailHelp" />

    <Button
        android:text="@string/help_send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEmailHelp"
        android:layout_alignLeft="@+id/etEmailHelp"
        android:layout_alignStart="@+id/etEmailHelp"
        android:layout_marginTop="17dp"
        android:id="@+id/btSend"
        android:onClick="send" />

    <Button
        android:text="@string/help_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btSend"
        android:layout_toRightOf="@+id/btSend"
        android:layout_toEndOf="@+id/btSend"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:id="@+id/btCancel"
        android:onClick="cancel" />
</RelativeLayout>

