<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_map_allergy_levels_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.allergyiap.activities.MapAllergyLevelsDetailsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:orientation="vertical">


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="4dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="vertical"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardCornerRadius="@dimen/cardview_default_elevation"
                card_view:cardElevation="@dimen/cardview_default_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left">

                        <ImageView
                            android:id="@+id/img_pin"
                            android:layout_width="@dimen/icon_info_width"
                            android:layout_height="@dimen/icon_info_width"
                            android:layout_gravity="right"
                            android:src="@drawable/icon_description"
                            android:textColor="@color/colorPrimaryDark" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/img_pin"
                            android:paddingBottom="10dp"
                            android:paddingTop="3dp"
                            android:text="@string/group_description"
                            android:textColor="@color/primary_text_default_material_light"
                            android:textSize="@dimen/abc_text_size_subhead_material" />

                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/description_example" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="4dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="vertical"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardCornerRadius="@dimen/cardview_default_elevation"
                card_view:cardElevation="@dimen/cardview_default_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left">

                        <ImageView
                            android:id="@+id/img_disease"
                            android:layout_width="@dimen/icon_info_width"
                            android:layout_height="@dimen/icon_info_width"
                            android:layout_gravity="right"
                            android:src="@drawable/icon_description"
                            android:textColor="@color/colorPrimaryDark" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/img_disease"
                            android:paddingBottom="10dp"
                            android:paddingTop="3dp"
                            android:text="@string/group_diseases"
                            android:textColor="@color/primary_text_default_material_light"
                            android:textSize="@dimen/abc_text_size_subhead_material" />

                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/disease_example" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="4dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="vertical"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardCornerRadius="@dimen/cardview_default_elevation"
                card_view:cardElevation="@dimen/cardview_default_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left">

                        <ImageView
                            android:id="@+id/img_medicament"
                            android:layout_width="@dimen/icon_info_width"
                            android:layout_height="@dimen/icon_info_width"
                            android:layout_gravity="right"
                            android:src="@drawable/icon_description"
                            android:textColor="@color/colorPrimaryDark" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/img_medicament"
                            android:paddingBottom="10dp"
                            android:paddingTop="3dp"
                            android:text="@string/group_medicament"
                            android:textColor="@color/primary_text_default_material_light"
                            android:textSize="@dimen/abc_text_size_subhead_material" />

                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/medicament_example" />

                </LinearLayout>

            </android.support.v7.widget.CardView>


        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
