<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_my_alarms"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.allergyiap.activities.MyAlarmsActivity"
    android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="Custom"
                style="?android:attr/listSeparatorTextViewStyle" />

        </LinearLayout>
    <View android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:padding="5dp"
        android:background="@android:color/darker_gray">
    </View>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:text="Alarm Notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox2"
            android:onClick="onCheckboxClicked"/>

    </LinearLayout>

<LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
        android:drawableTop="@drawable/ic_calendar"
        android:id="@+id/daysOfWeek"
        android:text="@string/days"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />
        </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:drawableTop="@drawable/icon_clock_alarm"
            android:id="@+id/hour"
            android:text="@string/hour"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="Automatic"
            style="?android:attr/listSeparatorTextViewStyle" />
    </LinearLayout>

    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:padding="5dp"
        android:background="@android:color/darker_gray">
    </View>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <CheckBox
        android:text="Notify only when the level increase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox3" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="Allergies to notify"
            style="?android:attr/listSeparatorTextViewStyle" />

    </LinearLayout>
    <View android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:padding="5dp"
        android:background="@android:color/darker_gray">
    </View>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:drawableTop="@drawable/ic_flower"
            android:id="@+id/allergy"
            android:text="@string/allergy"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />
    </LinearLayout>


</LinearLayout>
